[gd_scene load_steps=4 format=3 uid="uid://cqdtw6d2rft2m"]

[ext_resource type="Script" uid="uid://80ejxd086dpu" path="res://dream_of_days.gd" id="1_u87fj"]
[ext_resource type="Texture2D" uid="uid://ctrshiw3or1mg" path="res://Assets/CloseButtn.PNG" id="2_awm3o"]
[ext_resource type="Texture2D" uid="uid://cqrq5p53fghhs" path="res://Assets/icon.svg" id="3_awm3o"]

[node name="Dream of Days" type="Node2D"]
script = ExtResource("1_u87fj")

[node name="returnButton" type="TextureButton" parent="."]
offset_left = 5.0
offset_top = 10.0
offset_right = 184.0
offset_bottom = 190.0
texture_normal = ExtResource("2_awm3o")
ignore_texture_size = true
stretch_mode = 0

[node name="totumStallButton" type="TextureButton" parent="."]
offset_left = 266.0
offset_top = 368.0
offset_right = 716.0
offset_bottom = 779.0
texture_normal = ExtResource("3_awm3o")

[node name="premadeCustomStallButton" type="TextureButton" parent="."]
offset_left = 1149.0
offset_top = 349.0
offset_right = 1599.0
offset_bottom = 760.0
texture_normal = ExtResource("3_awm3o")

[connection signal="pressed" from="returnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="totumStallButton" to="." method="_on_totum_stall_button_pressed"]
[connection signal="pressed" from="premadeCustomStallButton" to="." method="_on_premade_custom_stall_button_pressed"]
